<resources>
    <string name="app_name">NotesApplication</string>

<!--    FRAGMENT WELCOME-->
    <string name="welcome_to_NotesApplication">Notepad application</string>
    <string name="nom">what is your name?</string>
    <string name="nom_ecrit">Write your name</string>
    <string name="text_bouton">Let\'s go</string>

<!--    FRAGMENT NOTEPAD-->

    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="edit">Write your text :</string>
    <string name="view">Your Text</string>
    <string name="bold">bold</string>
    <string name="italic">Italic</string>
    <string name="underlined">Underlined</string>
    <string name="description_smiley_big_smile">smiley big smile</string>
    <string name="description_smiley_smile">smiley smile</string>
    <string name="description_smiley_wink">smiley wink</string>
    <string name="smiley">Smiley</string>
    <string name="nothing">....</string>

</resources>