<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="WelcomeFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/notepad_icon_2" />

    <TextView
        android:id="@+id/message_for_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/nom"
        android:textSize="24sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:autofillHints="name"
        android:hint="@string/nom_ecrit"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/button_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="@string/text_bouton"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>